--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_user_profile">userProfile</string>
     <string name="title_activity_map">mapActivity</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_in">Sign In</string>
 </resources>
