--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,6 @@
     <string name="login_failed">"Login failed"</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_user_profile">userProfile</string>
+    <string name="title_activity_user_profile"></string>
     <string name="title_activity_map">mapActivity</string>
 </resources>
