--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,8 @@
         Hey there! \n \n
         Are you an artist looking for a venue, or are you a venue looking for artists?
     </string>
+    <string name="choose_wisely_this_cannot_be_undone_for_now">Choose wisely, this cannot be undone... (For now)</string>
+    <string name="i_m_a_venue">I\'m a venue!</string>
+    <string name="i_m_an_artist">I\'m an artist!</string>
 
 </resources>
